<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="english_ime_name">Hacker\'s Keyboard (by CodenameBeryl)</string>
    <string name="english_ime_settings">Settings for Hacker\'s Keyboard</string>
    <string name="english_ime_input_options">Input options</string>
    <string name="title_keyboard_view_settings">Keyboard view settings</string>
    <string name="title_keyboard_height_portrait">Keyboard height, portrait</string>
    <string name="title_keyboard_height_landscape">Keyboard height, landscape</string>
    <string name="title_key_layout_options">Key layout options</string>
    <string name="title_key_behavior_settings">Key behavior settings</string>
    <string name="title_long_press_alternate_keys">Long-press alternate keys</string>
    <string name="title_suggested_punctuation">Suggested punctuation</string>
    <string name="title_input_mode_settings">Input mode settings</string>
    <string name="title_debugging">Debugging</string>
    <string name="title_input_connection_details">Input connection details</string>
    <string name="title_version">Version</string>
    <string name="title_swipe_gestures">Swipe gestures (experimental)</string>
    <string name="title_hardware_key_actions">Hardware key actions</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="popup_on_keypress">Popup on keypress</string>
    <string name="hit_correction">Correct typing errors</string>
    <string name="hit_correction_summary">Enable input error correction</string>
    <string name="hit_correction_land">Landscape input errors</string>
    <string name="hit_correction_land_summary">Enable input error correction</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="prediction">Word suggestions</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="prediction_summary">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="auto_punctuate_summary"></string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="prefs_settings_key">Show settings key</string>
    <string-array name="settings_key_modes_values" translatable="false">
        <item>@string/settings_key_mode_auto</item>
        <item>@string/settings_key_mode_always_show</item>
        <item>@string/settings_key_mode_always_hide</item>
    </string-array>
    <string name="settings_key_mode_auto_name">Automatic</string>
    <string name="settings_key_mode_always_show_name">Always show</string>
    <string name="settings_key_mode_always_hide_name">Always hide</string>
    <string-array name="settings_key_modes">
        <item>@string/settings_key_mode_auto_name</item>
        <item>@string/settings_key_mode_always_show_name</item>
        <item>@string/settings_key_mode_always_hide_name</item>
    </string-array>
    <string name="bigram_suggestion">Bigram Suggestions</string>
    <string name="bigram_suggestion_summary">Use previous word to improve suggestion</string>
    <string-array name="prediction_modes">
        <item>None</item>
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="prediction_none" translatable="false">0</string>
    <string name="prediction_basic" translatable="false">1</string>
    <string name="prediction_full"  translatable="false">2</string>
    <string-array name="prediction_modes_values" translatable="false">
        <item>@string/prediction_none</item>
        <item>@string/prediction_basic</item>
        <item>@string/prediction_full</item>
    </string-array>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss">Press the back key \u21B6 to close the keyboard at any point</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary
        </string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="voice_warning_title">Voice input</string>
    <string name="voice_warning_locale_not_supported">Voice input is not currently supported for your language, but does work in English.</string>
    <string name="voice_warning_may_not_understand">Voice input is an experimental feature using Google\'s networked speech recognition.</string>
    <string name="voice_warning_how_to_turn_off">To turn off voice input, go to keyboard settings.</string>
    <string name="voice_hint_dialog_message">To use voice input, press the microphone button or slide your finger across the on-screen keyboard.</string>
    <string name="voice_listening">Speak now</string>
    <string name="voice_working">Working</string>
    <string name="voice_initializing"></string>
    <string name="voice_error">Error. Please try again.</string>
    <string name="voice_network_error">Couldn\'t connect</string>
    <string name="voice_too_much_speech">Error, too much speech.</string>
    <string name="voice_audio_error">Audio problem</string>
    <string name="voice_server_error">Server error</string>
    <string name="voice_speech_timeout">No speech heard</string>
    <string name="voice_no_match">No matches found</string>
    <string name="voice_not_installed">Voice search not installed</string>
    <string name="voice_swipe_hint"><b>Hint:</b> Swipe across keyboard to speak</string>
    <string name="voice_punctuation_hint"><b>Hint:</b> Next time, try speaking punctuation like \"period\", \"comma\", or \"question mark\".</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="voice_input">Voice input</string>
    <string-array name="voice_input_modes">
        <item>On main keyboard</item>
        <item>On symbols keyboard</item>
        <item>Off</item>
    </string-array>
    <string name="voice_mode_main" translatable="false">0</string>
    <string name="voice_mode_symbols" translatable="false">1</string>
    <string name="voice_mode_off"  translatable="false">2</string>
    <string-array name="voice_input_modes_values" translatable="false">
        <item>@string/voice_mode_main</item>
        <item>@string/voice_mode_symbols</item>
        <item>@string/voice_mode_off</item>
    </string-array>
    <string-array name="voice_input_modes_summary">
        <item>Mic on main keyboard</item>
        <item>Mic on symbols keyboard</item>
        <item>Voice input is disabled</item>
    </string-array>
    <string name="auto_submit">Auto submit after voice</string>
    <string name="auto_submit_summary">Automatically press enter when searching or going to the next field.</string>
    <string name="close_the_keyboard"><font size="17"><b>Close the keyboard\n</b></font><font size="3">\n</font>Press the Back key.</string>
    <string name="touch_and_hold"><font size="17"><b>Touch \u0026 hold a key for options\n</b></font><font size="3">\n</font>Access punctuation and accents.</string>
    <string name="keyboard_settings"><font size="17"><b>Keyboard settings\n</b></font><font size="3">\n</font>Touch \u0026 hold the <b>\?123\</b> key.</string>
    <string name="popular_domain_0">".com"</string>
    <string name="popular_domain_1">".net"</string>
    <string name="popular_domain_2">".org"</string>
    <string name="popular_domain_3">".gov"</string>
    <string name="popular_domain_4">".edu"</string>
    <string name="selectInputMethod">Select input method</string>
    <string name="language_selection_title">Input languages</string>
    <string name="language_selection_summary">Slide finger on spacebar to change language</string>
    <string name="hint_add_to_dictionary">\u2190 Touch again to save</string>
    <string name="has_dictionary">Dictionary available</string>
    <string name="prefs_enable_log">Enable user feedback</string>
    <string name="prefs_description_log">Help improve this input method editor by automatically sending usage statistics and crash reports to Google.</string>
    <string name="prefs_enable_recorrection">Touch to correct words</string>
    <string name="prefs_enable_recorrection_summary">Touch entered words to correct them</string>
    <string name="prefs_space_cursor_drag">Cursor control on spacebar</string>
    <string name="prefs_space_cursor_drag_summary">Swipe left/right on the spacebar to move the cursor</string>
    <string name="pref_screen_feedback_title">Key feedback settings</string>
    <string name="pref_screen_feedback_title_summary">Configure key sound, vibrate, preview popup etc.</string>
    <string name="pref_screen_view_title">Theme and label settings</string>
    <string name="pref_screen_view_title_summary">Configure theming and label display</string>
    <string name="keyboard_layout">Keyboard Theme</string>
    <string name="layout_basic" translatable="false">Basic</string>
    <string name="layout_high_contrast" translatable="false">Basic (High Contrast)</string>
    <string name="layout_stone_bold"  translatable="false">Stone (bold)</string>
    <string name="layout_stone_normal"  translatable="false">Stone (normal)</string>
    <string name="layout_gingerbread"  translatable="false">Gingerbread</string>
    <string name="layout_ics"  translatable="false">Ice Cream Sandwich (bright hints)</string>
    <string name="main_tagline">Power keyboard for developers</string>
    <string name="main_section_setup">SETUP</string>
    <string name="main_section_try">TRY IT OUT</string>
    <string name="main_setup_configure_imes">Enable keyboard</string>
    <string name="main_setup_configure_imes_desc">Add to system input methods</string>
    <string name="main_setup_set_ime">Set input method</string>
    <string name="main_setup_set_ime_desc">Select as your active keyboard</string>
    <string name="main_setup_get_dicts">More</string>
    <string name="main_setup_input_lang">Input languages</string>
    <string name="main_setup_input_lang_desc">Choose keyboard layouts and languages</string>
    <string name="main_setup_settings">Settings</string>
    <string name="main_setup_test_hint">Tap here to test the keyboard</string>
    <string name="selectEmoji">Emoji</string>
    <string name="selectClipboard">Clipboard</string>
    <string name="selectSticker">GIFs &amp; Stickers</string>
    <string name="switcher_keyboard">Keyboard</string>
</resources>